Complete modal styling, need to fix modal not dissapearing on small screen

--- a/src/sass/components/DesktopModal.scss
+++ b/src/sass/components/DesktopModal.scss
@@ -45,3 +45,7 @@
 //       }
 //   }
 // }
+
+@media screen and (max-width: 960px) {
+  
+}
